--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
 
 			</div>
 			
-
 			<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -59,8 +58,7 @@
 			</p>
 
 			<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			<a href="https://s3.amazonaws.com/uploads.hipchat.com/31349/591869/ghvIS1cuRYrPoIR/ResponsiveDesignV2-Desktop.png">quis nostrud...</a>
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,<a href="https://s3.amazonaws.com/uploads.hipchat.com/31349/591869/ghvIS1cuRYrPoIR/ResponsiveDesignV2-Desktop.png">quis nostrud...</a>
 			</p>
 
 			<div class="indent">
@@ -99,11 +97,17 @@
 				
 				<h3>SIDEBAR SECTION HEADING</h3>
 
-				<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore...</p>
+				<div class="side-bar-text">
+					
+					<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore...
+					</p>
+
+				</div>
+
 			</div>
 
 		</div>
