added blockquote. changed fonts and position in header

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link href='http://fonts.googleapis.com/css?family=Asap|Oswald:300' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Asap|Oswald:400' rel='stylesheet' type='text/css'>
 
 	<link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow' rel='stylesheet' type='text/css'>
 
@@ -63,7 +63,7 @@
 
 			<div class="indent">
 
-				<h2>WOAH, THAT'S RADICAL!</h2>
+				<blockquote>WOAH, THAT'S RADICAL!</blockquote>
 				
 			</div>
 
