--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 			</div>
 			
-			<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			<p class="1st-paragraph"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 			consequat. Duis aute...
@@ -88,6 +88,20 @@
 			<div class="side-body-1">
 				<img src="https://s3.amazonaws.com/uploads.hipchat.com/31349/802622/n5SBl3DzVKfP17q/round-pic.png">
 			</div>
+
+			<div class="anne-marie">
+				
+				ANNE MARIE
+
+			</div>
+
+			<div class="contact-anne">
+				
+				Twitter | Facebook | Instagram
+			
+			</div>
+
+			
 
 			<div class="side-body-2">
 				<img src="https://s3.amazonaws.com/uploads.hipchat.com/31349/802622/9RyEIUqEsHZ7MrJ/surfpic.png">
