repositioned 1st paragraph

--- a/index.html
+++ b/index.html
@@ -51,11 +51,14 @@
 
 			</div>
 			
-			<p class="1st-paragraph"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute...
-			</p>
+			<div class="1st-paragraph">
+				<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute...
+				</p>
+
+			</div>
 
 			<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,<a href="https://s3.amazonaws.com/uploads.hipchat.com/31349/591869/ghvIS1cuRYrPoIR/ResponsiveDesignV2-Desktop.png">quis nostrud...</a>
