fantastic heading and author name/date fixed

--- a/index.html
+++ b/index.html
@@ -47,19 +47,20 @@
 				<h1>A FANTASTIC ENGAGING HEADLINE GOES HERE
 				</h1>
 
-				<div></div>
+				<img src="https://s3.amazonaws.com/uploads.hipchat.com/31349/802622/n5SBl3DzVKfP17q/round-pic.png">
 
+				<span class="author-info">Anne Marie</span>
+
+				<span class="article-date">
+						on <span>Monday Oct.7 9:22pm
+					</span>
 			</div>
-			
-			<div class="1st-paragraph">
-				<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute...
-				</p>
-
-			</div>
-
+				
+			<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip exconsequat. Duis auteamet, consectetur adipisicing elit, sed do eiusmod...
+			</p>
+				
 			<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,<a href="https://s3.amazonaws.com/uploads.hipchat.com/31349/591869/ghvIS1cuRYrPoIR/ResponsiveDesignV2-Desktop.png">quis nostrud...</a>
 			</p>
