fixed block quote

--- a/index.html
+++ b/index.html
@@ -62,18 +62,18 @@
 			</p>
 				
 			<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,<a href="https://s3.amazonaws.com/uploads.hipchat.com/31349/591869/ghvIS1cuRYrPoIR/ResponsiveDesignV2-Desktop.png">quis nostrud...</a>
-			</p>
+			tempor incididunt ut labore et dolore magna aliqua. Put a few more words in here. Ut enim ad minim veniam, <a href="https://s3.amazonaws.com/uploads.hipchat.com/31349/591869/ghvIS1cuRYrPoIR/ResponsiveDesignV2-Desktop.png"style="color: #a3b3bf">quis nostrud...
+			</a>
 
-			<div class="indent">
+			<div class="quote">
 
 				<blockquote>WOAH, THAT'S RADICAL!</blockquote>
-				
+
 			</div>
 
 			<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud <a href="https://s3.amazonaws.com/uploads.hipchat.com/31349/591869/ghvIS1cuRYrPoIR/ResponsiveDesignV2-Desktop.png">exercitation (rollover)</a> ullamco laboris nisi ut aliquip ex ea commodo
+			quis nostrud <a href="https://s3.amazonaws.com/uploads.hipchat.com/31349/591869/ghvIS1cuRYrPoIR/ResponsiveDesignV2-Desktop.png"style="color:#106db3">exercitation (rollover)</a> ullamco laboris nisi ut aliquip ex ea commodo
 			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
