--- a/index.html
+++ b/index.html
@@ -108,7 +108,13 @@
 			
 
 			<div class="side-body-2">
+				
 				<img src="https://s3.amazonaws.com/uploads.hipchat.com/31349/802622/9RyEIUqEsHZ7MrJ/surfpic.png">
+
+				<span class="ad-text">
+					About This Ad
+				</span>
+
 			</div>
 
 			<div class="side-body-3">
