pretty sure container-3 is done

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			quis nostrud <a href="https://s3.amazonaws.com/uploads.hipchat.com/31349/591869/ghvIS1cuRYrPoIR/ResponsiveDesignV2-Desktop.png"style="color:#106db3">exercitation (rollover)</a> ullamco laboris nisi ut aliquip ex ea commodo
 			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, putting a bunch more words consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore...
 			</p>
 
@@ -125,9 +125,8 @@
 					
 					<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore...
+					quis nostrud exercitation <a href="http://css-tricks.com/snippets/css/simple-and-nice-blockquote-styling/"style="color:#a3b3bf">ullamco</a> laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor.
 					</p>
 
 				</div>
