placed bottom pics

--- a/index.html
+++ b/index.html
@@ -138,13 +138,13 @@
 	</div>
 
 	<div class="below-body">
-		
+		<span>MOST POPULAR POSTS</span>
 	</div>
 
-	<div class="container=4">
+	<div class="container-4">
 		
 		<div class="footer-1">
-			
+			ANOTHER COOL POST
 		</div>
 
 		<div class="footer-2">
