footer text added

--- a/index.html
+++ b/index.html
@@ -144,23 +144,39 @@
 	<div class="container-4">
 		
 		<div class="footer-1">
-			ANOTHER COOL POST
+			
+			<span>ANOTHER COOL POST</span>
+		
 		</div>
 
 		<div class="footer-2">
 			
+			<span>POST TITLE</span>
+
 		</div>
 
 		<div class="footer-3">
+
+			<span>HERE'S ANOTHER LONGER POST TITLE</span>
 			
 		</div>
 
 		<div class="footer-4">
+
+			<span>OH COOL A POST</span>
 			
 		</div>
 
 		<div class="footer-nav">
 			
+			<span>
+				The Ironyard Copyright 2013, All Rights Reserved
+			</span>
+
+			<li>
+				Nav Item 1 &nbsp;|&nbsp; Nav Item 2 &nbsp;|&nbsp; Nav Item 3 &nbsp;|&nbsp; Nav Item 5
+			</li>
+
 		</div>
 
 	</div>
